--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
-}
+	margin: 20px auto;
+	width: 80%;
+	min-width: 940px;
+	font-size: 16px;
+	box-shadow: 0 0 5px black;
+	}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+h1 {
+	text-align: center;
+	border-bottom: 1px solid gray;
+	padding: 20px;
+	margin: 20px;
+	}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+h4 {
+	text-align: center;
+	}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+@media screen and (max-width: 1679px) {
+	.App {
+		width: 85%;
+		}
+	}
 
-.App-link {
-  color: #61dafb;
-}
+@media screen and (max-width: 1366px) {
+	.App {
+		width: 95%;
+		font-size: 14px;
+		}
+	}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@media screen and (max-width: 1023px) {
+	.App {
+		width: 100%;
+		font-size: 12px;
+		}
+	}
