--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
 	margin: 20px auto;
 	width: 80%;
-	min-width: 940px;
+	min-width: 840px;
 	font-size: 16px;
 	box-shadow: 0 0 5px black;
 	}
@@ -15,6 +15,10 @@ h1 {
 
 h4 {
 	text-align: center;
+	}
+
+.dark {
+	filter: brightness(30%);
 	}
 
 @media screen and (max-width: 1679px) {
@@ -32,7 +36,7 @@ h4 {
 
 @media screen and (max-width: 1023px) {
 	.App {
-		width: 100%;
+		width: 98%;
 		font-size: 12px;
 		}
 	}
